--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -4,36 +4,36 @@
 <!-- Custom CSS via inline styles
      You may use this template to add custom CSS to your site like so: -->
 
-<!-- <style>
+<style>
      /* Links */
      a:hover {
-         color: #b6b84c;
+         color: #49744F;
      }
 
      /* Header Buttons on Startpage */
      a.btn {
          color: white;
-          background-color: #ced067;
+          background-color: #49744F;
      }
      a.btn:hover {
-          background-color: #b6b84c;
+          background-color: #49744F;
      }
 
      /* Scroll Menu on Startpage */
      a.fn-item.active {
-          color: #b6b84c;
+          color: #49744F;
      }
      a.fn-item:hover {
-          color: #ced067;
+          color: #00700F;
      }
 
      /* Content / Sections */
      .post-holder.odd {
-          background: #B80135;
+          background: #49744F;
           color: white;
      }
      .post-holder {
-          background: #f2efe8;
+          background: #ECFAED;
      }
      body {
           color: #3A4145;
@@ -44,7 +44,7 @@
           color: #BBC7CC;
           background-color: #22343A;
      }
-</style> -->
+</style>
 
 <!-- Custom CSS via "custom.css"-file
      If you would rather place your custom CSS into
